@@ -3,7 +3,7 @@
 		<!-- Top part -->
 		<grid rows="1" cols="2" hspacing="4">
 			<vbox expand="true">
-				<group ui:inject="GraphGroup" ipadding.h="0" ipadding.t="6" ipadding.b="0" expand="true" fill="true" text="labels.graphs.time">
+				<group ui:inject="GraphGroup" ipadding="0" expand="true" fill="true" text="labels.graphs.time">
 					<!-- Time graph -->
 					<graph width.min="560" height.min="280" expand="true">
 						<origin hpos="1" vpos="-1" visible="false"/>
@@ -23,27 +23,28 @@
 
 						<!-- Axis -->
 						<axis min="0" max="4" color="graph_prim" angle="1.0" log="false" visibility="false"/>
-						<axis min="-48 db" max="0 db" color="graph_prim" angle="0.5" log="true" visibility="false"/>
+						<axis min="-48 db" max="12 db" color="graph_prim" angle="0.5" log="true" visibility="false"/>
 
 						<!-- Baseline -->
 						<marker v="0 db" ox="1" oy="0" color="graph_prim" width="2"/>
 
 						<!-- Meshes -->
-						<mesh id="ig_l" width="2" color="left_in" visibility=":igv_l"/>
-						<mesh id="ig_r" width="2" color="right_in" visibility=":igv_r"/>
+						<mesh id="ig_l" width="0" color="left_in" fcolor="left_in" fcolor.a="0.8" fill="true" visibility=":igv_l"/>
+						<mesh id="ig_r" width="0" color="right_in" fcolor="right_in" fcolor.a="0.8" fill="true" visibility=":igv_r"/>
 						<mesh id="og_l" width="2" color="left" visibility=":ogv_l"/>
 						<mesh id="og_r" width="2" color="right" visibility=":ogv_r"/>
 						<mesh id="scg_l" width="2" color="sidechain_1" visibility=":scgv_l"/>
 						<mesh id="scg_r" width="2" color="sidechain_2" visibility=":scgv_r"/>
-						<mesh id="grg_l" width="2" color="bright_blue" visibility=":grgv_l"/>
-						<mesh id="grg_r" width="2" color="bright_blue" visibility=":grgv_r"/>
+						<mesh id="grg_l" width="2" color="bright_blue" visibility=":grgv_l" fcolor="bright_blue" fcolor.a="0.8" fill="true"/>
+						<mesh id="grg_r" width="2" color="bright_blue" visibility=":grgv_r" fcolor="bright_blue" fcolor.a="0.8" fill="true"/>
 
 						<!-- Markers -->
 						<marker id="th" editable="true" width="2" pointer="vsize" color="threshold" hcolor="threshold_hover" ox="1" oy="0"/>
 
 						<!-- Text -->
 						<ui:attributes x="4" halign="1" valign="-1">
-							<text y="0 db" text="graph.values.x:db" text:value="0"/>
+							<text y="12 db" text="graph.values.x:db" text:value="12"/>
+							<text y="0 db" text="0"/>
 							<text y="-12 db" text="-12"/>
 							<text y="-24 db" text="-24"/>
 							<text y="-36 db" text="-36"/>
