@@ -153,10 +153,10 @@ namespace lsp
             METER_OUT_GAIN("olm" id, "Output level meter" label, GAIN_AMP_0_DB), \
             METER_OUT_GAIN("sclm" id, "Sidechain level meter" label, GAIN_AMP_0_DB), \
             METER_GAIN_DFL("grlm" id, "Gain reduction level meter" label, GAIN_AMP_0_DB, GAIN_AMP_0_DB), \
-            MESH("ig" id, "Input graph" label, 2, limiter_metadata::HISTORY_MESH_SIZE), \
+            MESH("ig" id, "Input graph" label, 2, limiter_metadata::HISTORY_MESH_SIZE + 2), \
             MESH("og" id, "Output graph" label, 2, limiter_metadata::HISTORY_MESH_SIZE), \
             MESH("scg" id, "Sidechain graph" label, 2, limiter_metadata::HISTORY_MESH_SIZE), \
-            MESH("grg" id, "Gain graph" label, 2, limiter_metadata::HISTORY_MESH_SIZE)
+            MESH("grg" id, "Gain graph" label, 2, limiter_metadata::HISTORY_MESH_SIZE + 2)
 
         #define LIMIT_METERS_MONO       LIMIT_METERS("", "")
         #define LIMIT_METERS_STEREO     LIMIT_METERS("_l", " Left"), LIMIT_METERS("_r", " Right")
